# VacationBookingManager

./: .replit  Pasted-DEBUG-app-Sample-mapped-booking-structure-check-in-2024-01-07-check-out-2024-12-31--1733143503606.txt  Pasted-DEBUG-smoobu-api-No-more-bookings-found-in-chunk-36-after-page-0-INFO-smoobu-api-Chunk-36-complete--1733142270218.txt  Pasted-Given-the-behavior-you-re-describing-it-seems-that-the-API-call-might-not-be-effectively-paginating-1729593849704.txt  Pasted-Here-s-an-approach-to-address-the-issue-Fetch-All-Data-First-Instead-of-filtering-as-data-is--1729594540387.txt  Pasted-Project-Overview-Objective-Develop-a-PHP-based-application-to-manage-and-display-bookings-for-vaca-1729166379362.txt  Pasted-To-address-the-issue-of-missing-data-when-filtering-by-future-dates-it-appears-the-API-requests-are-1729593053249.txt  Pasted-Upon-reviewing-the-provided-code-it-appears-the-design-may-not-adequately-handle-all-future-booking-1729596774521.txt  Pasted-Upon-reviewing-the-provided-code-it-appears-the-design-may-not-adequately-handle-all-future-booking-1729598074641.txt  Pasted-data-image-png-base64-iVBORw0KGgoAAAANSUhEUgAAAcIAAAHCCAIAAADzel4SAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbW-1733236799268.txt  Pasted-data-image-png-base64-iVBORw0KGgoAAAANSUhEUgAABAAAAAQACAIAAADwf7zUAAAAK3RFWHRDcmVhdGlvbiBUaW1lAFdlZC-1733236773795.txt  Pasted-import-useState-useEffect-from-react-import-ChevronLeft-ChevronRight-Calendar-as-Calendar-1729174124878.txt  Pasted-let-s-examine-the-potential-points-in-the-current-setup-that-may-affect-retrieving-future-bookings-a-1729600273104.txt  (+6 more)
(+11 files in other folders)
