[project]
name = "repl-nix-vacationbookingmanager"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask==2.3.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "flask-babel==4.0.0",
    "requests>=2.32.3",
    "cairosvg>=2.7.1",
    "pillow>=11.0.0",
]
